# RustyRides

./: .gitignore  CMakeLists.txt  CustomerDialog.cpp  CustomerDialog.h  LICENSE  README.md  customer.ui  main.cpp  mainwindow.cpp
database/: database-test.json  database.json  template.json
include/: Car.h  CarDialog.h  CarManager.h  Customer.h  CustomerDialog.h  CustomerManager.h  JsonParser.h  Lease.h  LeaseDialog.h  LeaseManager.h  areyousuredialog.h  editleasedialog.h  mainwindow.h
include/ui-windows/: CarDialog.h  CustomerDialog.h  LeaseDialog.h  editleasedialog.h  mainwindow.h
src/: Car.cpp  CarDialog.cpp  CarManager.cpp  Customer.cpp  CustomerDialog.cpp  CustomerManager.cpp  JsonParser.cpp  Lease.cpp  LeaseDialog.cpp  LeaseDialog.ui  LeaseManager.cpp  areyousuredialog.cpp  areyousuredialog.ui  cardialog.ui  customer.ui  customerdialog.ui  editleasedialog.cpp  editleasedialog.ui  mainwindow.cpp  mainwindow.ui
src/ui-design-files/: LeaseDialog.ui  mainwindow.ui
src/ui-handlers/: CarDialog.cpp  CustomerDialog.cpp  LeaseDialog.cpp  areyousuredialog.cpp  editleasedialog.cpp  mainwindow.cpp
test/: carAddToJsonTest.cpp  carAddToJsonTest.h  carAdderTest.cpp  testForStuff.cpp  testForStuff.h
